#VERSION 0.8.4#

 - added abstract class Peak_FormValidation

 - added methods _setError() and _regexp() to Peak_Filters

 - added methods getSanitizeFilters() and getValidateFilters() to Peak_Filters

 - added abstract class Peak_Filters

 - renamed constants _VERSION_, _NAME_ and _DESCR_ to PK_VERSION, PK_NAME and PK_DESCR


#VERSION 0.8.3#

 - added class Peak_Controller_Helper_Validate

 - modified Peak_Controller_Helpers to support peak library controller helpers too

 - added method exists() in Peak_View_Theme

 - deleted deprecated methods setOptions() and getOptions() in Peak_View_Theme 

 - fixed and renamed method folder() to setFolder() in Peak_View_Theme

 - added methods __construct() and _jsonError()(PHP 5.3) to Peak_Config_Json

 - added method postRender() in Peak_Controller_Front and fixed render() in Peak_Application

 - fixed method dispatch() of Peak_Controller_Front when dispatching the default controller 

 - added property $error_controller and method errorDispatch() in Peak_Controller_Front

 - deleted deprecated classes Peak_Core_Extension_Codegen, Peak_Core_Extension_Configs and Peak_Core_Extension_Lang

 - rewrited Peak_Codegen_Controller class to use Peak_Codegen_Class

 - rewrited Peak_Codegen_Bootstrap class to use Peak_Codegen_Class

 - fixed minor problem with methods generate() in Peak_codegen_Class_Method, Peak_codegen_Class_Property and
   Peak_codegen_Class_Param

 - added constants INDENTATION_SPACE and LINE_BREAK to Peak_Codegen

 - added classes Peak_Codegen_Class, Peak_codegen_Class_Constant, Peak_codegen_Class_Docblock, Peak_codegen_Class_Element, 
   Peak_codegen_Class_Method, Peak_codegen_Class_Param, Peak_codegen_Class_Property

 - fixed Peak_Application so that it is no longer a singleton and removing $_instance and getInstance()

 - renamed property $allow_internal_controller to plural in Peak_Controller_Front and fixed method _registryConfig() to force
   boolean conversion for this property. 
